Removed Empty Cart and Order Errors
